# Calculator_In_CLion

./: CMakeLists.txt  CraftSystem.cpp  CraftSystem.h  Initializer.cpp  Initializer.h  README.md  allHeaders.h  fluidCraftMark.cpp  fluidCraftMark.h  fluidItems.cpp  fluidItems.h  main.cpp  solidBlocks.xml  solidCraftMark.cpp  solidCraftMark.h  solidItems.cpp  solidItems.h
